# magpie

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pixi.toml  pyproject.toml  run_checks.sh  setup.sh
.github/workflows/: code-quality.yml
docs/: LINTING.md  TYPE_ANNOTATIONS.md
magpie/: prepare_dataset.py  train.py
src/magpie/: __init__.py  fscache.py  prepare_dataset.py
src/magpie/train/: __init__.py  __main__.py  model.py
src/tests/: conftest.py  run_tests.py  test_prepare_dataset.py  test_train.py  test_utils.py
src/typings/: README.md
src/typings/hn_sdk/: __init__.pyi
src/typings/hn_sdk/client/: __init__.pyi
src/typings/hn_sdk/client/v0/: __init__.pyi  client.pyi
