[project]
name = "magpie"
version = "0.1.0"
description = ""
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
  "beautifulsoup4~=4.12.3",
  "requests~=2.32.3",
  "setfit~=1.0.3",
  "torch~=2.3.1",
  "datasets~=2.20.0",
  "arrow~=1.3.0",
  "dateparser~=1.2.0",
  "accelerate~=0.32.0",
  "optimum[onnxruntime-gpu]~=1.21.1",
  "hn-sdk",
]

[dependency-groups]
dev = [
  "ipython~=8.26.0",
  "ipywidgets~=8.1.3",
  "jupyterlab~=4.2.3",
]

[tool.uv.sources]
hn-sdk = { url = "https://github.com/creatorrr/hacker-news/archive/main.zip" }
