[project]
name = "magpie"
version = "0.1.0"
description = ""
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
  "beautifulsoup4~=4.12.3",
  "requests~=2.32.3",
  "liqfit",
  "torch~=2.3.1",
  "datasets~=2.20.0",
  "arrow~=1.3.0",
  "dateparser~=1.2.0",
  "accelerate~=0.32.0",
  "optimum[onnxruntime-gpu]~=1.21.1",
  "hn-sdk",
  "transformers",
  "scikit-learn>=1.6.1",
  "fscache>=0.4.0",
  "joblib>=1.4.2",
]

[dependency-groups]
dev = [
  "huggingface-hub[cli]>=0.29.3",
  "ipython~=8.26.0",
  "ipywidgets~=8.1.3",
  "jupyterlab~=4.2.3",
  "pyright~=1.1.355",
  "pytest>=8.3.5",
  "ruff>=0.11.2",
]

[tool.uv.sources]
hn-sdk = { url = "https://github.com/creatorrr/hacker-news/archive/main.zip" }

[tool.pyright]
include = ["magpie", "tests"]
exclude = ["**/__pycache__", "**/.pytest_cache"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.10"
typeCheckingMode = "basic"
stubPath = "typings"

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4
src = ["magpie", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "PL",   # pylint
    "TRY",  # tryceratops
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR0913", # Too many arguments to function call
    "PLR0915", # Too many statements
]

[tool.ruff.lint.isort]
known-first-party = ["magpie"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
